--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -47,22 +47,14 @@
     </servlet-mapping>
 
 
-    <servlet>
-        <servlet-name>indexTrainee</servlet-name>
-        <jsp-file>/WEB-INF/pages/indexTrainee.jsp</jsp-file>
-    </servlet>
-    <servlet-mapping>
-        <servlet-name>indexTrainee</servlet-name>
-        <url-pattern>/indexTrainee</url-pattern>
-    </servlet-mapping>
 
     <servlet>
-        <servlet-name>indexAdmin</servlet-name>
-        <jsp-file>/WEB-INF/pages/indexAdmin.jsp</jsp-file>
+        <servlet-name>index</servlet-name>
+        <jsp-file>/WEB-INF/pages/index.jsp</jsp-file>
     </servlet>
     <servlet-mapping>
-        <servlet-name>indexAdmin</servlet-name>
-        <url-pattern>/indexAdmin</url-pattern>
+        <servlet-name>index</servlet-name>
+        <url-pattern>/index</url-pattern>
     </servlet-mapping>
 
     <!--questionnaire-->
@@ -83,6 +75,8 @@
         <servlet-name>createQuestionnaire</servlet-name>
         <url-pattern>/createquestionnaire</url-pattern>
     </servlet-mapping>
+
+
 
     <servlet>
         <servlet-name>createQuestionnaireAction</servlet-name>
@@ -110,6 +104,18 @@
     <servlet-mapping>
         <servlet-name>createQuestionAction</servlet-name>
         <url-pattern>/action/createQuestion</url-pattern>
+    </servlet-mapping>
+
+
+
+    <!--result-->
+    <servlet>
+        <servlet-name>resultList</servlet-name>
+        <servlet-class>Controller.DisplayResultList</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>resultList</servlet-name>
+        <url-pattern>/resultList</url-pattern>
     </servlet-mapping>
 
 </web-app>
